// Copyright 2024 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

option optimize_for = LITE_RUNTIME;

package page_info.proto;

message PrivacyPolicyAnnotation {
  // Whether the page is a privacy policy page.
  optional bool is_privacy_policy = 1;

  // Canonical URL of the privacy policy page.
  optional string canonical_url = 2;
}